# Connection_Backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Procfile  RAILWAY_DEPLOYMENT.md  README.md  nixpacks.toml  package-lock.json  package.json  railway.json
migrations/: 001_create_projects_schema.sql  run-migration.bat
src/: config.rs  connection.rs  db.rs  error.rs  errorHandle.js  handlers.rs  index.js  introspection.rs  main.rs  models.rs  routes.rs  state.rs  users.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
src/db/: mod.rs  queries.rs  service.rs
src/models/: database.rs  foreign_key.rs  mod.rs  project.rs  table.rs
src/pipeline/: metadata.rs  mirror.rs  mod.rs  orchestrator.rs  proposal.rs  risk.rs  types.rs
src/proposal/: changes.rs  migration.rs  mod.rs  models.rs  store.rs
src/routes/: auth.rs  connection.rs  database.rs  databaseRoute.js  foreignKeyRoute.js  foreign_key.rs  pipeline.rs  project.rs  snapshot.rs  table.rs  tableRoutes.js
src/simulation/: analyzer.rs  dry_run.rs  mod.rs
src/snapshot/: blast_radius.rs  diff.rs  mod.rs  rules.rs  store.rs
src/utils/: database.js  db.js
