[package]
name = "interactive-db-api"
version = "1.0.0"
edition = "2021"
authors = ["Interactive Database Team"]
description = "High-performance PostgreSQL database management REST API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ayuussshhh/Connection_Backend"
keywords = ["database", "postgresql", "api", "rest", "backend"]
categories = ["database", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full", "macros", "rt-multi-thread"] }

# Web framework
axum = { version = "0.8", features = ["json", "macros", "tokio"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "request-id", "util", "propagate-header"] }

# Database
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"
url = "2.5"
sha2 = "0.10"

# Security
regex = "1.11"

[dev-dependencies]
# Testing
tokio-test = "0.4"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
