[package]
name = "schemaflow-api"
version = "2.0.0"
edition = "2021"
authors = ["SchemaFlow Team"]
description = "Database Governance Platform - GitHub PR for Databases"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ayuussshhh/Connection_Backend"
keywords = ["database", "postgresql", "governance", "schema", "migration"]
categories = ["database", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full", "macros", "rt-multi-thread"] }

# Web framework
axum = { version = "0.8", features = ["json", "macros", "tokio"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "request-id", "util", "propagate-header"] }

# Database - Target connections
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2" }
tokio-postgres-rustls = "0.13"
rustls = "0.23"
rustls-native-certs = "0.8"

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"
url = "2.5"
sha2 = "0.10"

# Security
regex = "1.11"
rand = "0.8"

[dev-dependencies]
# Testing
tokio-test = "0.4"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
